<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background2"
    tools:context=".ui.AboutMeActivity">

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:constraint_referenced_ids="tvTitle,tvAboutMeName,tvAboutMeTeacher"
        app:flow_verticalStyle="packed"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutMeTitle"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/tvAboutMeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutMeName"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tvAboutMeTeacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutMeTeacher"
        android:textStyle="bold"
        android:textSize="18sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>